# docs-parser

./: .gitignore  LICENSE  README.md  pyproject.toml
data/output/checkbox/: ocr_results.json  openai_results.json
data/output/form/: form_ocr.json
data/output/mail/: mail_ocr.json
data/output/word/: ocr_results.json  openai_results.json
src/docs_parser/: cli.py  main.py  models.py  openai_client.py  processor.py  settings.py
