[project]
name = "docs-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mostafa Abdelrashied", email = "mostafa.abdelrashied@outlook.de" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.65.5",
    "pdf2image>=1.17.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytesseract>=0.3.13",
]

[project.scripts]
parse = "docs_parser.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.9",
]
